--- a/src/Css/Nav.module.css
+++ b/src/Css/Nav.module.css
@@ -34,7 +34,7 @@
     transition: all 425ms cubic-bezier(0.05, 0.65, 0.18, 1);
   }
   .special_con:hover .bar {
-    background-color: #ff9307;
+    background-color: var(--main-color);
   }
   /* END OF BURGER BUTTON*/
 .nav{
@@ -69,7 +69,7 @@
   
   .ulNavWrapper {
     max-width: 400px;
-    border-left: 0.5px solid #ff9307;
+    border-left: 0.5px solid var(--main-color);
     overflow: hidden;
     height: 0;
     position: relative;
@@ -109,7 +109,7 @@
   .ulNavWrapper > ul > li > a:before {
     display: block;
     content: '';
-    border-bottom: solid 1px #ff9307;
+    border-bottom: solid 1px var(--main-color);
     transform: scaleX(0);
     transition: transform 300ms ease-in-out;
     transform-origin: left;
@@ -120,7 +120,7 @@
     width: 100%;
   }
   .ulNavWrapper > ul > li:hover a {
-    color: #ff9307;
+    color: var(--main-color);
   }
   .ulNavWrapper > ul > li > a:hover:before{
     transform: scaleX(1);
@@ -128,7 +128,7 @@
   .polygon{
     -webkit-clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
     clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
-    background-color: #ff9307;
+    background-color: #777777;
     width: 50px;
     height: 50px;
     position: absolute;
@@ -151,4 +151,16 @@
     left: 40px;
     width: 20px;
     height: 20px;
+  }
+  @media only screen and (max-width: 480px) {
+    .col:nth-child(1) {
+      position: fixed;
+      left: 25px;
+      top: 30px;
+    }
+    .col:nth-child(2) {
+      position: fixed;
+      right: 25px;
+      top: 25px;
+    }
   }
