--- a/src/Css/Nav.module.css
+++ b/src/Css/Nav.module.css
@@ -128,7 +128,7 @@
   .polygon{
     -webkit-clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
     clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
-    background-color: #777777;
+    background-color: var(--main-color);
     width: 50px;
     height: 50px;
     position: absolute;
@@ -139,7 +139,6 @@
     bottom: -7px;
     left: -10px;
   }
-
   .polygon:nth-child(2){
     bottom: 50px;
     width: 25px;
@@ -151,6 +150,18 @@
     left: 40px;
     width: 20px;
     height: 20px;
+  }
+  .loading_bar {
+    width: 100%;
+    height: 8px;
+    display: block;
+    background-color: #777777;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    transform: scaleX(0);
+    transform-origin: left;
   }
   @media only screen and (max-width: 480px) {
     .col:nth-child(1) {
