--- a/src/Css/App.module.css
+++ b/src/Css/App.module.css
@@ -3,6 +3,8 @@
     width: 100vw;
     max-width: 100vw;
     overflow: hidden;
+    /* background: rgb(32,32,32);
+    background: radial-gradient(circle, #333 0%, #1e1e1e 100%); */
 }
 .container{
     height: 100%;
