--- a/src/Css/Nav.module.css
+++ b/src/Css/Nav.module.css
@@ -1,30 +1,20 @@
 /*BURGER BUTTON ANIMATIONS*/
 .col {
     z-index: 252;
-  }
-  
-  .col:nth-child(1) {
     position: fixed;
-    left: 50px;
-    top: 30px;
+    right: 35px;
+    top: 35px;
   }
-  .col:nth-child(2) {
-    position: fixed;
-    right: 50px;
-    top: 50px;
-  }
-  
   .special_con {
     cursor: pointer;
     display: inline-block;
     z-index: 252;
-    width: 50px;
+    width: 65px;
     position: relative;
     background: transparent;
     border: none;
     outline: none;
-  }
-  
+  } 
   .bar {
     display: block;
     height: 1px;
@@ -39,14 +29,7 @@
   /* END OF BURGER BUTTON*/
 .nav{
     top: 0;
-    height: 80px;
     width: 100% ;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    z-index:251;
-    position:absolute;
 } 
 .navigation {
     width: 100%;
@@ -163,6 +146,18 @@
     transform: scaleX(0);
     transform-origin: left;
   }
+.headerArrWrap > button{
+  outline: none;
+  border: none;
+  margin: 0px 2px;
+  border-radius: 50%;
+  padding: 10px 15px;
+  background-color: #000000;
+  color: #fff;
+  cursor: pointer;
+}
+
+
   @media only screen and (max-width: 480px) {
     .col:nth-child(1) {
       position: fixed;
