portfolio project cards + responsivity

--- a/src/Css/App.module.css
+++ b/src/Css/App.module.css
@@ -12,4 +12,10 @@
     padding: 0 25px;
 }
 
+@media only screen and (max-width: 768px) {
+    .container{
+        padding: 0 50px;
+    }
+}
+
   
