--- a/public/main.css
+++ b/public/main.css
@@ -1,8 +1,8 @@
 body {
     color: #cacaca;
     height: 100vh;
-    background: rgb(32,32,32);
-    background: radial-gradient(circle, #333 0%, #1e1e1e 100%);
+    background: rgb(32,32,32) !important;
+    background: radial-gradient(circle, #333 0%, #1e1e1e 100%) !important;
     display: flex;
     align-items: center;
     justify-content: center;
