--- a/src/Css/ProjectDetails.module.css
+++ b/src/Css/ProjectDetails.module.css
@@ -8,6 +8,7 @@
   }
   .projectDetailsContainer .single_item_heading{
     text-transform: uppercase;
+    overflow-wrap: break-word;
   }
   .projectDetailsContainer .single_item_heading:after{
     content: '_';
@@ -26,6 +27,7 @@
     }
   .projectDetailsContainer p{
     color: #cacaca;
+    overflow-wrap: break-word;
   }
   .projectDetailsContainer p{
     font-weight: 400;
@@ -45,6 +47,7 @@
     padding-bottom: 0;
     color: #cacaca;
     transition: all 425ms cubic-bezier(0.05, 0.65, 0.18, 1);
+    overflow-wrap: break-word;
   }
   .projectDetailsContainer h2:hover {
     cursor: default;
@@ -99,14 +102,17 @@
     cursor: pointer;
     color: #fff;
     padding: 0;
+    width: 100%;
+    max-width: 200px;
   }
   .single_item_button a {
     color: #cacaca;
-    padding: 15px 20px;
+    padding: 15px 0px;
     font-family: 'Montserrat';
     background-color: transparent;
     position: relative;
     z-index: 1;
+    width: 100%;
   }
   .single_item_button:focus{
     border: none;
@@ -140,10 +146,10 @@
     border: none;
     outline: none;
     opacity: 0.8;
-    height: 45px;
-    width: 100px;
+    padding: 15px 20px;
     box-shadow: 0px 2px 2px rgb(0, 0, 0, 50%);
     cursor: not-allowed;
+    outline: 1px solid #cacaca;
   }
   .single_item_about {
     padding-bottom: 1rem;
@@ -160,4 +166,31 @@
     50% {
       color: #cacaca;
     }
+}
+@media only screen and (max-width: 480px) {
+
+  .single_item_button_disabled{
+    padding: 10px;
+  }
+  .single_item_button > a{
+    padding: 10px 0px;
+  }
+  .single_item_buttons{
+    flex-wrap: wrap;
+  }
+}
+@media only screen and (max-width: 370px) {
+  .single_item_button,
+  .single_item_button_disabled{
+    width: 100%;
+    max-width: unset;
+  }
+  .single_item_button > a{
+    width: 100%;
+    max-width: 100%;
+    padding: 10px 0px;
+  }
+  .single_item_button{
+    margin-bottom: 10px;
+  }
 }
