--- a/src/Css/ProjectList.module.css
+++ b/src/Css/ProjectList.module.css
@@ -5,33 +5,64 @@
     align-content: center;
     justify-content: space-between;
     align-items: center;
-    margin-top: 15px;
+    margin: 15px 0px;
+    list-style: none;
+    padding: 0px;
 }
 /* SINGLE PROJECT CARD */
 .item_card {
-    margin: 15px 15px 15px 0px;
     min-width: 400px;
-    width: calc(50% - 20px);
+    padding: 15px;
     text-align: center;
-    max-height: 275px;
-    box-shadow: 8px 10px 5px 0px rgba(0, 0, 0, 0.25);
-    animation-name: animateIn;
-    animation-duration: 350ms;
-    animation-delay: calc(var(--animation-order) * 100ms);
+    width: calc(50% - 30px);
     animation-fill-mode: both;
     animation-timing-function: cubic-bezier(0.05, 0.65, 0.18, 1);
-  } 
-  .item_card_header > *{
-    user-select: none;
+  }
+  .item_card > a{
+    width: 100%;
+    position: relative;
+    display: unset;
+    transition: unset;
+    box-shadow: 8px 10px 5px 0px rgba(0, 0, 0, 0.25);
+  }
+  .item_card > a:hover{
+    color: #cacaca;
+  }
+  .item_card > a:after{
+    position: unset;
+    width: unset;
+    height: unset;
+    background: unset;
+    transform: unset;
+    border: unset;
+    border-radius: unset;
+    transform-origin: unset;
+    content: unset;
+  }
+  .item_card > a > *{
+    pointer-events: none;
+  }
+  .item_card > a > .main_info > .back > ul > li:last-child{
+    pointer-events: all;
+  }
+  .item_card > a > .main_info > .back > ul > li:last-child:hover {
+    color: var(--main-color);
+  }
+  .item_card > a > .main_info > .back > ul > li:last-child:active {
+    pointer-events: none;
   }
   .item_card_header {
-    background-color: #1b1b1b;
-    padding: 0.5rem;
+    background-color: #cacaca;
+    padding: 0.35rem 0.5rem;
     display: flex;
     color: #cacaca;
     text-transform: uppercase;
   }
-  .item_card_header .arrows {
+  .item_card_header > *{
+    user-select: none;
+    color: #444444;
+  }
+  .item_card_header .arrows{
     display: flex;
     align-items: center;
   }
@@ -39,170 +70,81 @@
     margin: 0 2px;
     font-weight: 300;
   }
-  .item_card_header .adress div {
-    text-align: center;
-    width: 100%;
-  }
-  .item_card_header .adress {
-    width: 100%;
+  .item_card_header .adress{
+    width:calc(100% - 18px * 5 - 1.5rem);
     display: flex;
-    align-items: center;
-    justify-content: space-between;
     margin: 0 0.5rem;
     padding: 0.25rem 0.5rem 0.25rem 0.5rem;
-    background-color: #252525;
+    background-color: #aaaaaa;
     border-radius: 0.7rem;
+    overflow: hidden;
   }
-  .item_card_header .adress p,
   .item_card_header .adress h4 {
     margin: 0;
-  }
-  .item_card_header .adress h4 {
-    font-size: 0.9rem;
+    font-size: 0.7rem;
     font-weight: 600;
-    color: #cacaca;
+    line-height: 0.7rem;
+    color: #444444;
     text-shadow: none !important;
     letter-spacing: 0.05rem;
-  }
-  .item_card_header .adress p {
-    font-size: 0.8rem;
-    align-self: center;
+    text-align: center;
+    width: 100%;
+    max-width: 100%;
   }
   .item_card_header .vertical_dots {
     align-self: center;
     font-weight: 300;
+    position: relative;
+    top: -1px;
   }
-  .main_info {
+  .main_info{
     position: relative;
     overflow: hidden;
-    height: 225px;
+    max-height: 218px;
   }
-  .main_info:hover {
-    cursor: pointer;
-  }
-  .item_image {
-    width: 100%;
-    height: 100%;
-  }
-  .item_image_shadow {
+  .main_info .back{
     position: absolute;
-    width: 100%;
+    top: -100%;
+    transition: all 325ms ease-in-out;
     height: 100%;
-    box-shadow: inset 0px 0px 20px 1px rgba(0, 0, 0, 0.3);
-    top: 0;
-    left: 0;
-  }
-  .hover_info {
     width: 100%;
-    height: 225px;
-    position: absolute;
-    top: 0;
-    left: 0;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    z-index: -1;
-    opacity: 0;
-    transform: translateY(-100%);
-    transition: all 725ms cubic-bezier(0.05, 0.65, 0.18, 1);
-    background: #333;
-    opacity: 0.5;
+    align-items: flex-start;
+    justify-content: center;
   }
-  .hover_info > .ullinkwrap {
-    height: 100%;
-    width: 80%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-  .hover_info ul {
+  .main_info .back ul{
+    list-style: none;
+    padding-left: 0;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     align-items: center;
-    padding: 0;
-    margin-top: 0px;
+    justify-content: center;
+    max-width: 75%;
+    margin-top: 2rem;
   }
-  .hover_info > .ullinkwrap > ul li {
-    display: inline-block;
-    margin: 4px;
+  .main_info .back ul li{
+    margin: 0.2rem;
     padding: 0.5rem;
-    background-color: #252525;
-    color: rgb(202, 202, 202);
-    opacity: 1;
-    font-weight: 300;
+    background-color: #202020;
+    text-transform: uppercase;
+    font-size: 0.75rem;
     border-radius: 3px;
-    border: 1px solid #1b1b1b;
-    font-size: 0.75em;
-    box-shadow: 1px 3px 0 rgb(0 0 0 / 25%);
+    font-weight: 500;
   }
-  .hover_info > .ullinkwrap > a {
-    padding: 0.25rem 0 0 0;
-    color: rgb(202, 202, 202);
-    width: 100px;
-    background-color: #252525;
-    transition: all 0.3s cubic-bezier(0.05, 0.65, 0.18, 1) 25;
-    border-radius: 3px;
-    box-shadow: 1px 3px 0 rgb(0 0 0 / 25%);
-    position: relative;
-    font-size: 16px;
-    font-weight: 300;
-    border-radius: 3px;
-    box-shadow: 1px 3px 0 rgb(0 0 0 / 25%);
-    position: relative;
-    padding-bottom: 3px;
-  }
-  .hover_info a::after {
-    display: block;
-    content: '';
-    border-bottom: solid 1px #ff9307;
-    border-top: solid 1px #ff9307;
-    transition: all 325ms cubic-bezier(0.05, 0.65, 0.18, 1);
+  .main_info .back ul li:last-child{
     position: absolute;
-    top: 0px;
-    left: 50%;
-    width: 0;
-    height: 100%;
+    bottom: 15px;
+    transition: all 325ms ease-in-out;
   }
-  .hover_info a::before {
-    position: absolute;
-    content: '';
+  .main_info .back ul li:last-child:hover{
+    color: var(--main-color);
+  }
+  .item_card:hover .back{
     top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background: #1a1a1a;
-    transform: scaleX(0);
-    transition: all 325ms cubic-bezier(0.05, 0.65, 0.18, 1);
-    transform-origin: 100% 50%;
-    z-index: -1;
-    border-radius: 3px;
   }
-  .hover_info a:hover:before {
-    transform: scaleX(1);
-  }
-  .hover_info a:hover:after {
-    width: 100%;
-    left: 0;
-  }
-  .main_info:hover .hover_info {
-    transform: translateY(0);
-    opacity: 1;
-    z-index: 1;
-  }
-  .main_info:hover .hover_info ul li {
+  .item_card:hover .back ul li{
     animation-name: animateIn;
-    animation-delay: calc(var(--animation-order) * 35ms);
-    animation-fill-mode: both;
-    animation-duration: 0.285s;
-    animation-timing-function: cubic-bezier(0.5, 1.2, 0.5, 1.2);
-  }
-  .main_info:hover .hover_info a {
-    animation-name: animateIn;
-    animation-delay: 850ms;
+    animation-delay:425ms;
     animation-fill-mode: both;
     animation-duration: 0.285s;
     animation-timing-function: cubic-bezier(0.5, 1.2, 0.5, 1.2);
@@ -232,5 +174,72 @@
     font-weight: 600;
     letter-spacing: 0.05rem;
   }
+  @keyframes animateIn {
+    0% {
+      opacity: 0;
+      transform: scale(0.8) translateY(-25px);
+    }
+    50% {
+      transform: scale(1) translateY(5px);
+    }
+    100% {
+      opacity: 1;
+    }
+  }
 /* END OF SINGLE PROJECT CARD */
+
+@media only screen and (max-width: 1120px) {
+  .item_card{
+    min-width: 375px;
+  }
+  .main_info{
+    max-height: 182px;
+  }
+}
+@media only screen and (max-width: 956px) {
+  .item_card{
+    min-width: 355px;
+    padding: 10px;
+    width: calc(50% - 20px);
+  }
+  .main_info{
+    max-height: 164px;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .item_card{
+    min-width: unset;
+    padding: 10px 0px;
+    width: 100%;
+  }
+  .main_info{
+    height: 255px;
+    max-height: unset;
+  }
+}
+@media only screen and (max-width: 620px) {
+  .main_info{
+    height: 230px;
+  }
+}
+@media only screen and (max-width: 580px) {
+  .main_info{
+    height: 200px;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .main_info{
+    height: 175px;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .main_info{
+    height: 150px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .main_info{
+    height: 125px;
+  }
+}
 
