--- a/src/Css/App.module.css
+++ b/src/Css/App.module.css
@@ -2,7 +2,7 @@
     height: 100vh;
     width: 100vw;
     max-width: 100vw;
-    overflow: hidden;
+    overflow-x: hidden;
     /* background: rgb(32,32,32);
     background: radial-gradient(circle, #333 0%, #1e1e1e 100%); */
 }
