--- a/src/Css/Arrows.module.css
+++ b/src/Css/Arrows.module.css
@@ -1,9 +1,9 @@
 /* ARROWS */
 .arrows_link {
     position: fixed;
-    top: 0%;
-    width: 75px;
-    height: 100%;
+    top: 25%;
+    width: 150px;
+    height: 50%;
     -moz-transition: -moz-transform 0.7s cubic-bezier(0.7, 0, 0.25, 1) 0.25s,
       opacity 0.2s ease-out 0.75s;
     -o-transition: -o-transform 0.7s cubic-bezier(0.7, 0, 0.25, 1) 0.25s,
@@ -24,8 +24,7 @@
     line-height: 20px;
     padding: 0 10px;
     opacity: 0;
-    text-transform: uppercase;
-    font-size: 10px;
+    font-size: 1rem;
     font-weight: 600;
     -moz-transition: opacity 0.1s ease 0.125s,
       -moz-transform 0.3s cubic-bezier(0, 0, 0, 1) 0.125s;
@@ -196,7 +195,23 @@
     color: #ff9307 !important;
 }
 /* END OF ARROWS */
-
+/* arrows_link */
+@media only screen and (max-width: 1280px) {
+    .arrows_link{
+        width: 100px;
+    }
+    .arrows_link span{
+        font-size: 0.75rem;
+    }
+}
+@media only screen and (max-width: 1000px) {
+    .arrows_link > span{
+        display: none;
+    }
+    .arrows_link{
+        width: 75px;
+    }
+}
 @media only screen and (max-width: 768px) {
     .arrows_link{
         width: 50px;
@@ -206,13 +221,10 @@
         height: 24px;
         width: 24px;
     }
-    .arrows_link > span{
-        display: none;
-    }
     .arrowRight > em {
-        right: calc(50% - 10px);
+        right: calc(50% - 13px);
     }
     .arrowLeft > em {
-        left: calc(50% - 10px);
+        left: calc(50% - 18px);
     }
 }
