--- a/src/Css/App.module.css
+++ b/src/Css/App.module.css
@@ -1,5 +1,6 @@
 .app{
     height: 100vh;
+    /* height: 100%; */
     width: 100vw;
     max-width: 100vw;
     overflow-x: hidden;
@@ -14,7 +15,7 @@
 
 @media only screen and (max-width: 768px) {
     .container{
-        padding: 0 50px;
+        padding: 0 40px;
     }
 }
 
