--- a/src/Css/Nav.module.css
+++ b/src/Css/Nav.module.css
@@ -161,8 +161,8 @@
     right: 15px;
     top: unset;
     bottom: 15px;
-    border-radius: 50%;
-    padding:9px 5px;
+    padding:3px 5px;
+    background-color: #333;
   }
   .col > button{
     position: relative;
