--- a/src/Css/ProjectDetails.module.css
+++ b/src/Css/ProjectDetails.module.css
@@ -1,10 +1,11 @@
 
 .projectDetailsContainer {
-    padding-top: 100px;
+    padding-top: 125px;
     font-weight: 300;
     max-width: 1000px;
     width: 100%;
     margin: 0 auto;
+    padding-bottom: 50px;
   }
   .projectDetailsContainer .single_item_heading{
     text-transform: uppercase;
@@ -34,15 +35,16 @@
     text-align: left;
     line-height: 26px;
   }
-  .projectDetailsContainer p strong{
-    font-weight: 900 !important;
+  .projectDetailsContainer p strong,
+  .projectDetailsContainer p a{
+    font-weight: 600 !important;
   }
   .projectDetailsContainer h2 {
     font-size: 32px;
     text-transform: uppercase;
     font-weight: 400;
     text-align: left;
-    margin-top: 50px;
+    margin-top: 30px;
     margin-bottom: 10px;
     padding-bottom: 0;
     color: #cacaca;
@@ -74,6 +76,7 @@
     font-weight: 300;
     cursor: default;
     transition: all 425ms cubic-bezier(0.05, 0.65, 0.18, 1);
+    text-transform: uppercase;
   }
   .projectDetailsContainer .tech_list_items li:before {
     content: '✓';
@@ -93,7 +96,19 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    margin-top: 25px;
+    margin: 25px 0;
+    animation-name: animateElIn;
+    animation-delay: 125ms;
+    animation-fill-mode: both;
+    animation-duration: 0.285s;
+    animation-timing-function: cubic-bezier(0.5, 1.2, 0.5, 1.2);
+  }
+  .singleContent {
+    animation-name: animateElIn;
+    animation-delay: 525ms;
+    animation-fill-mode: both;
+    animation-duration: 0.285s;
+    animation-timing-function: cubic-bezier(0.5, 1.2, 0.5, 1.2);
   }
   .single_item_button {
     outline: 1px solid #cacaca;
@@ -158,7 +173,7 @@
     margin-bottom: 0 !important;
   }
   
-  @keyframes blink-caret {
+@keyframes blink-caret {
     from,
     to {
       color: transparent;
@@ -167,16 +182,43 @@
       color: #cacaca;
     }
 }
+@keyframes animateElIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-25px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+@media only screen and (max-width: 800px) {
+  .projectDetailsContainer{
+    padding: 75px 0px;
+    max-width: 550px;
+  }
+}
 @media only screen and (max-width: 480px) {
-
+  .projectDetailsContainer{
+    padding: 50px 0px;
+  }
   .single_item_button_disabled{
     padding: 10px;
+    width: 100%;
   }
   .single_item_button > a{
     padding: 10px 0px;
   }
   .single_item_buttons{
     flex-wrap: wrap;
+  }
+  .single_item_button{
+    margin: 5px 0;
+    width: 100%;
+    max-width: unset;
+  }
+  .projectDetailsContainer p {
+    font-size: 0.9rem;
   }
 }
 @media only screen and (max-width: 370px) {
