--- a/src/Css/ProjectDetails.module.css
+++ b/src/Css/ProjectDetails.module.css
@@ -1,11 +1,12 @@
 
 .projectDetailsContainer {
-    padding-top: 125px;
+    padding-top: 100px;
     font-weight: 300;
     max-width: 1000px;
     width: 100%;
     margin: 0 auto;
     padding-bottom: 50px;
+    min-height: calc(100% - 150px);
   }
   .projectDetailsContainer .single_item_heading{
     text-transform: uppercase;
@@ -200,7 +201,7 @@
 }
 @media only screen and (max-width: 480px) {
   .projectDetailsContainer{
-    padding: 50px 0px;
+    padding: 25px 0px;
   }
   .single_item_button_disabled{
     padding: 10px;
