--- a/public/main.css
+++ b/public/main.css
@@ -1,11 +1,9 @@
 body {
     color: #cacaca;
-    height: 100vh;
     background: rgb(32,32,32) !important;
     background: radial-gradient(circle, #333 0%, #1e1e1e 100%) !important;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    height: 100vh;
+    width: 100%;
 }
 noscript{
   text-align: center;
