--- a/src/Css/App.module.css
+++ b/src/Css/App.module.css
@@ -1,21 +1,21 @@
+
 .app{
+    width: 100%;
     height: 100vh;
-    /* height: 100%; */
-    width: 100vw;
-    max-width: 100vw;
-    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
     /* background: rgb(32,32,32);
     background: radial-gradient(circle, #333 0%, #1e1e1e 100%); */
 }
 .container{
     height: 100%;
-    margin: 0 auto;
-    padding: 0 25px;
+    padding: 0 55px;
+    overflow-x: hidden;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 480px) {
     .container{
-        padding: 0 40px;
+        padding: 0 15px;
     }
 }
 
