--- a/src/Css/Arrows.module.css
+++ b/src/Css/Arrows.module.css
@@ -228,3 +228,8 @@
         left: calc(50% - 18px);
     }
 }
+@media only screen and (max-width: 480px) {
+    .arrows_link{
+        display: none;
+    }
+}
