--- a/src/Css/Portfolio.module.css
+++ b/src/Css/Portfolio.module.css
@@ -1,26 +1,25 @@
 .portfolio{
-    min-height: 100vh;
+    min-height:calc(100% - 150px);
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
     flex-direction: column;
     overflow: hidden;
-    padding-top: 125px;
     width: 100%;
     max-width: 1000px;
     margin: 0 auto;
+    padding-top: 100px;
     padding-bottom: 50px;
 }
 
 .portfolio .screenReaders{
     display: none;
 }
-
 .portfolio h2{
     padding-right: 5px;
     font-size: 2rem;
-  user-select: none;
-
+    color: #cacaca;
+    padding: 0 15px;
 }
 .portfolio h2::after{
   content: '_';
@@ -36,7 +35,129 @@
     }
 }
 
-@media only screen and (max-width: 1120px) {
+.filter{
+  width: 100%;
+  opacity: 0;
+  transform: translateY(50px);
+}
+.filter p{
+  margin-bottom: 0;
+  padding: 0 15px;
+}
+.filter ul{
+  padding: 0 15px;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: flex-start;
+}
+.filter ul li{
+  margin: .3rem 0.2rem;
+  position: relative;
+  padding: 0.3rem 0.75rem;
+  background-color: transparent;
+  border-radius: 2px;
+  box-shadow: 1px 3px 0 rgb(0 0 0 / 25%);
+  border: 1px solid #cacaca;
+  font-size: 0.875rem;
+  line-height: 0.875rem;
+  cursor: pointer;
+}
+
+.filter ul li::after{
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  height: 95%;
+  width: 100%;
+  background: #1a1a1a;
+  transform: scaleX(0);
+  transition: transform 250ms cubic-bezier(0.05, 0.65, 0.18, 1);
+  transform-origin: 100% 50%;
+  z-index: -1;
+}
+.filter ul li:before {
+  position: absolute;
+  content: '';
+  bottom: -1px;
+  right: 0;
+  height: 2px;
+  width: 100%;
+  background: var(--main-color);
+  transform: scaleX(0);
+  transition: transform 250ms cubic-bezier(0.05, 0.65, 0.18, 1);
+  transform-origin: left;
+  z-index: 1;
+}
+.filter ul li:hover:after,
+.filter ul li:hover:before,
+.filter ul li:focus:before,
+.filter ul li:focus:after {
+  transform: scaleX(1);
+}
+
+.filter ul li span{
+  position: relative;
+  z-index: 2;
+  font-weight: 600;
+  color: #cacaca;
+}
+.filter ul li:hover{
+  border-bottom: none;
+}
+.filterAnim {
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: transparent;
+  z-index: 999;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none !important;
+  overflow: hidden;
+}
+
+.filterAnim > em:first-child {
+  background: rgb(60, 60, 60);
+  height: 50%;
+  width: 100%;
+  top: 0;
+  position: absolute;
+  transform: translateX(-100%);
+}
+
+.filterAnim > em:last-child {
+  background: rgb(40, 40, 40);
+  height: 50%;
+  width: 100%;
+  bottom: 0;
+  position: absolute;
+  transform: translateX(100%);
+}
+
+.filterTextWrap {
+  overflow: hidden;
+  position: absolute;
+  z-index: 1000;
+}
+
+.filterTextWrap > span {
+  position: relative;
+  top: -20px;
+  font-size: 1rem;
+  font-weight: 600;
+  color: rgb(202, 202, 202);
+}
+ @media only screen and (max-width: 1120px) {
   .portfolio{
     max-width: 850px;
   }
@@ -51,9 +172,18 @@
     max-width: 550px;
     padding: 75px 0px;
   }
+  .portfolio h2,
+  .portfolio p,
+  .filter ul{
+    padding: 0 ;
+  }
 }
 @media only screen and (max-width: 480px) {
   .portfolio{
-    padding: 50px 0px;
+    padding: 25px 0px;
+  }
+  .filter ul li{
+    font-size: 0.8rem;
+    line-height: 0.9;
   }
 }
