--- a/src/Css/ProjectList.module.css
+++ b/src/Css/ProjectList.module.css
@@ -122,6 +122,8 @@
     border-radius: 3px;
     font-weight: 500;
     line-height: 0;
+    box-shadow: 3px 4px 5px 0px rgb(0 0 0 / 45%);
+
   }
   .back > ul > li:last-child{
     pointer-events: all;
