--- a/src/Css/Nav.module.css
+++ b/src/Css/Nav.module.css
@@ -166,6 +166,25 @@
   color: #fff;
   cursor: pointer;
 }
+.footer{
+  max-width: 325px;
+  width: 100%;
+  padding: 20px 0 50px 0;
+  margin: 0 auto;
+  text-align: center;
+}
+.footer h3 {
+  font-size: 1.25rem;
+  margin: 0.5rem 0;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+.footer p{
+  line-height: 1.5rem;
+}
+.footer a {
+  font-weight: 600;
+}
 @media only screen and (max-width: 480px) {
   .col{
     right: 15px;
