--- a/src/Css/Nav.module.css
+++ b/src/Css/Nav.module.css
@@ -233,11 +233,13 @@
   padding: 20px 0 50px 0;
   margin: 0 auto;
   text-align: center;
-  animation-name: animateIn;
+  transform: translateY(100px);
+  opacity: 0;
+  /* animation-name: animateIn;
   animation-delay:425ms;
   animation-fill-mode: both;
   animation-duration: 0.285s;
-  animation-timing-function: cubic-bezier(0.5, 1.2, 0.5, 1.2);
+  animation-timing-function: cubic-bezier(0.5, 1.2, 0.5, 1.2); */
 }
 
 @keyframes animateIn {
