--- a/src/Css/Portfolio.module.css
+++ b/src/Css/Portfolio.module.css
@@ -165,8 +165,8 @@
 
 .filterTextWrap > span {
   position: relative;
-  top: -20px;
-  font-size: 1rem;
+  top: -30px;
+  font-size: 1.2rem;
   font-weight: 600;
   color: rgb(202, 202, 202);
 }
@@ -190,6 +190,9 @@
   .filter ul,
   .portfolio .par{
     padding: 0 ;
+  }
+  .filterTextWrap > span{
+    font-size: 1rem;
   }
 }
 @media only screen and (max-width: 480px) {
