--- a/src/Css/ProjectList.module.css
+++ b/src/Css/ProjectList.module.css
@@ -160,7 +160,7 @@
     animation-fill-mode: both;
     animation-duration: 325ms;
     animation-timing-function: ease-in-out;
-    transform-origin: left;
+    transform-origin: top;
   }
   .ribbon {
     position: absolute;
