--- a/public/main.css
+++ b/public/main.css
@@ -8,3 +8,82 @@ body {
 noscript{
   text-align: center;
 }
+
+#page-loader{
+  position: absolute;
+  z-index: 1000;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(0);
+  background: rgb(32,32,32);
+  background: radial-gradient(circle, #333 0%, #1e1e1e 100%);
+  transition: transform 1s ease-in-out !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.loader-hide{
+  transform: translateY(100%);
+}
+.d_none{
+  display: none !important;
+}
+.ellipsis {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 13px;
+}
+.ellipsis div {
+  position: absolute;
+  top: 0px;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background: #cacaca;
+  animation-timing-function: linear;
+}
+.ellipsis div:nth-child(1) {
+  left: 8px;
+  animation: ellipsis1 0.6s infinite;
+}
+@keyframes ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.ellipsis div:nth-child(4) {
+  left: 56px;
+  animation: ellipsis4 0.6s infinite;
+}
+
+@keyframes ellipsis4 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+.ellipsis div:nth-child(2) {
+  left: 8px;
+  animation: ellipsis2 0.6s infinite;
+}
+
+.ellipsis div:nth-child(3) {
+  left: 32px;
+  animation: ellipsis2 0.6s infinite;
+}
+@keyframes ellipsis2 {
+  0% {
+    transform: translate(0,0);
+  }
+  100% {
+    transform: translate(24px, 0);
+  }
+}
